Build fix for systems with <elf_abi.h> instead of <elf.h>. Bugzilla #7707.

--- a/configure.ac
+++ b/configure.ac
@@ -60,6 +60,7 @@ sdkdir=$(pkg-config --variable=sdkdir xorg-server)
 
 # Checks for header files.
 AC_HEADER_STDC
+AC_CHECK_HEADERS([elf.h] [elf_abi.h])
 
 AC_SUBST([XORG_CFLAGS])
 AC_SUBST([moduledir])
